# templates

./: .gitignore  README.org
git/hooks/: post-commit  pre-commit  pre-push
github/workflows/: pypi.yaml  sphinx_doc_to_gh_pages.yaml
org/: org_reveal.org
python/: requirements.txt
python/package/: setup.cfg
python/package/docs/: conf.py
python/package/package/: __init__.py  utils.py
python/package/package/io/: io.py
python/package/package/logs/: logs.py
