[metadata]
name = <pkg_name>
version = 0.0.1
description = <description>
long_description = file: README.md
url = https://github.com/<user|org>/<pkg_name>
author = <name>
license = GNU Lesser GPLv3

[options]
python_requires = >=3.8

zip_safe = False

install_requires =
  matplotlib
  numpy
  pandas
  pySPM
  ruamel.yaml
  scikit-image
  scipy
  seaborn
  tqdm


packages = find:

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mpl

docs =
  Sphinx
  sphinx_rtd_theme

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*

[yapf]
based_on_style = pep8
column_limit = 120